<resources>
    <string name="app_name">Textbooking</string>
    <string name="appName">网上书店</string>
    <string name="edit_id">工号或学号</string>
    <string name="edit_Pwd">密码</string>
    <string name="sign_in">登录</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="registered">注册账户</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">非法的工号或学号</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="main_home">首页</string>
    <string name="main_manage">管理</string>
    <string name="main_admin">管理员</string>
    <string name="main_message">消息</string>
    <string name="main_shoppingCart">购物车</string>
    <string name="main_me">我</string>
    <string name="project_name">网上书店</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="num">1</string>

    <string name="textbook_price">定价：xxx 元</string>
    <string name="textbook_author">作者名称</string>
    <string name="textbook_name">书名</string>
    <string name="textbook_num">数量</string>
    <string name="book_values">￥：xxx 元</string>

    <string name="add_to_Shopping_Cart">加入购物车</string>
    <string name="Buy_now">立即购买</string>
    <string name="delete_shoppingcart">删除</string>
    <string name="detail_buy">订购数量</string>
    <string name="detail_total">剩余数量</string>
    <string name="user_name">李玮光</string>
    <string name="user_id">20160751</string>
    <string name="user_repair">修改个人资料</string>
    <string name="user_order">订单</string>
    <string name="user_money">余额查询</string>
    <string name="user_setting">设置</string>
    <string name="logout">登出</string>
    <string name="about">关于app</string>
    <string name="oldPwd">请输入旧密码</string>
    <string name="newPwd">请输入新密码</string>
    <string name="newPwd2">请再次输入新密码</string>
    <string name="submit">提交</string>
    <string name="godown">下架</string>
    <string name="register_id">请输入注册账号</string>
    <string name="register_pwd">请输入注册密码</string>
    <string name="register_username">请输入注册用户名</string>
    <string name="repair_pwd">修改密码</string>
    <string name="address">输入地址</string>
    <string name="major">输入专业</string>
    <string name="mail">输入个人邮箱</string>
    <string name="birth">生日</string>
    <string name="balance">余额</string>
    <string name="order">订单列表</string>
    <string name="money">当前余额: xxx元</string>
    <string name="charge_value">请输入充值金额</string>
    <string name="forget_id">请输入账号</string>
    <string name="forget">忘记密码</string>
    <string name="year">2019</string>
    <string name="month">11</string>
    <string name="day">6</string>
    <string name="register_pwd_2">再次输入密码</string>
    <string name="isfemale">男/女</string>
    <string name="total_num">100</string>

    <string name="statement">此项目为2019年大四软件项目实践大作业  由上海电力大学李金洲、李玮光共同开发</string>
    <string name="code">源码地址： https://github.com/ljz572000/Textbooking</string>

</resources>
