<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RepairPwdActivity">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/repair_pwd_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/repair_pwd_back"
            android:text="@string/repair_pwd"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/oldPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/oldPwd" />

    <EditText
        android:id="@+id/newPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oldPwd"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/newPwd" />

    <EditText
        android:id="@+id/newPwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPwd"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/newPwd2" />

    <Button
        android:id="@+id/submit_pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPwd2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/bluesky"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>