<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"
            android:background="@color/white"
            ></ImageButton>

    </RelativeLayout>
    <ImageView
        android:id="@+id/detail_pic"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="#000"
        android:background="@color/light_white"
        android:layout_below="@+id/detail_toolbar"
        >
    </ImageView>
    <TextView
        android:id="@+id/detail_textbookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_pic"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/textbook_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/detail_textbookPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_textbookName"
        android:text="@string/textbook_price"
        android:textColor="@color/text_price_color"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/detail_textbookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textbook_author"
        android:layout_below="@+id/detail_textbookPrice"
        />
    <RelativeLayout
        android:id="@+id/total_number"
        android:layout_below="@+id/detail_textbookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_total"/>
        <TextView
            android:id="@+id/addorbuy_num"
            android:layout_below="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_buy"
            android:textColor="@color/black"
            android:textSize="24sp"
            />
        <ImageButton
            android:id="@+id/add_num"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/add_num"
            android:text="@string/num"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <ImageButton
            android:id="@+id/sub_num"
          android:layout_toLeftOf="@+id/num"
            android:layout_below="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sub"
            android:background="@color/white"/>
        <ScrollView
            android:layout_below="@id/sub_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/brief"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="brief"/>
        </ScrollView>

    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/detail_textbookAuthor"
    android:layout_alignParentBottom="true"
    >

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#0080FF"
        android:text="@string/add_to_Shopping_Cart"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
    android:background="#0000FF"
        android:text="@string/Buy_now"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
    />


</LinearLayout>
</RelativeLayout>