<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RepairActivity">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/repairBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/repairBack"
            android:text="@string/user_repair"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar"
        android:layout_marginTop="20dp"
        android:hint="@string/address"
        android:singleLine="true"
        android:inputType="text"/>

    <EditText
        android:id="@+id/major"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_marginTop="10dp"
        android:hint="@string/major"
        android:singleLine="true"
        android:inputType="text"/>

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/major"
        android:layout_marginTop="10dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/birth_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/birth"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/birth"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birth_label"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/year_add"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:src="@drawable/ic_add"
                />
            <EditText
                android:id="@+id/edit_year"
                android:layout_below="@+id/year_add"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/year"
                android:gravity="center"
                />
            <ImageButton
                android:id="@+id/year_sub"
                android:layout_below="@+id/edit_year"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:src="@drawable/ic_sub"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/month_add"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:src="@drawable/ic_add"/>
            <EditText
                android:id="@+id/edit_month"
                android:layout_below="@+id/month_add"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/month"
                android:gravity="center"
                />
            <ImageButton
                android:id="@+id/month_sub"
                android:layout_below="@+id/edit_month"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:src="@drawable/ic_sub"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <ImageButton
                android:id="@+id/day_add"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:src="@drawable/ic_add"/>
            <EditText
                android:id="@+id/edit_day"
                android:layout_below="@+id/day_add"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/day"
                android:gravity="center"
                />
            <ImageButton
                android:id="@+id/day_sub"
                android:layout_below="@+id/edit_day"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Transparent"
                android:src="@drawable/ic_sub"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/birth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/bluesky"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp" />


</RelativeLayout>