<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="7dp">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_home"
            android:gravity="center"
            android:text="@string/main_home"
            android:textColor="@drawable/main_textcolor"
            android:textSize="@dimen/bar_text"></RadioButton>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_message"
            android:gravity="center"
            android:text="@string/main_message"
            android:textColor="@drawable/main_textcolor"
            android:textSize="@dimen/bar_text"></RadioButton>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_shopping_cart"
            android:gravity="center"
            android:text="@string/main_shoppingCart"
            android:textColor="@drawable/main_textcolor"
            android:textSize="@dimen/bar_text"></RadioButton>

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_me"
            android:gravity="center"
            android:text="@string/main_me"
            android:textColor="@drawable/main_textcolor"
            android:textSize="@dimen/bar_text"></RadioButton>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.9"
        android:layout_above="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        >
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>